gcc/testsuite/gdc.test/fail_compilation/fail7524a.d

// 7524

#line 47 __DATE__
